# hardcover.cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/workflows/: api-schema-sync.md
.githooks/: pre-commit
.github/workflows/: api-schema-sync.yml
.specs/: api-schema-sync.md  api-schema-sync.tasks.md
src/: client.rs  config.rs  display.rs  lib.rs  main.rs
tests/: client_tests.rs  display_tests.rs
