[package]
name = "hc"
version = "0.1.0"
edition = "2024"
description = "Hardcover.app CLI - manage your books from the terminal"
repository = "https://github.com/ThorbenWoelk/hardcover.cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tabled = "0.20"
colored = "3"
chrono = "0.4"
dirs = "6.0.0"
toml = "1.0.6"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
